remove unused running options